# gitdb

./: .gitignore  Cargo.toml  README.md  description.md  remote.md
.github/workflows/: ci.yml
crates/reflink-forest-backup/: Cargo.toml
crates/reflink-forest-backup/src/: lib.rs
crates/reflink-forest-btrfs/: Cargo.toml
crates/reflink-forest-btrfs/src/: lib.rs
crates/reflink-forest-btrfs/tests/: privileged_loopback.rs
crates/reflink-forest-cache/: Cargo.toml
crates/reflink-forest-cache/src/: lib.rs
crates/reflink-forest-checkout/: Cargo.toml
crates/reflink-forest-checkout/src/: lib.rs
crates/reflink-forest-core/: Cargo.toml
crates/reflink-forest-core/src/: lib.rs
crates/reflink-forest-daemon/: Cargo.toml
crates/reflink-forest-daemon/src/: lib.rs  production.rs  structured_log.rs
crates/reflink-forest-daemon/tests/: import_checkout_orchestration.rs  maintenance_jobs.rs  operation_events.rs  operational_maintenance.rs  operational_maintenance_jobs.rs
crates/reflink-forest-format/: Cargo.toml
crates/reflink-forest-format/src/: lib.rs
crates/reflink-forest-git/: Cargo.toml
crates/reflink-forest-git/src/: lib.rs
crates/reflink-forest-import/: Cargo.toml
crates/reflink-forest-import/src/: lib.rs
crates/reflink-forest-index/: Cargo.toml
crates/reflink-forest-index/src/: lib.rs
crates/reflink-forest-maintenance/: Cargo.toml
crates/reflink-forest-maintenance/src/: lib.rs
crates/reflink-forest-probe/: Cargo.toml
crates/reflink-forest-probe/src/: main.rs
crates/reflink-forest-store/: Cargo.toml
crates/reflink-forest-store/src/: lib.rs
crates/reflink-forest-store/tests/: location_rebuild.rs  million_record_soak.rs
crates/reflink-forest-workspace/: Cargo.toml
crates/reflink-forest-workspace/src/: lib.rs
crates/reflink-forest-workspace/tests/: checkout_acceptance.rs
docs/: fault-matrix.md  format-v1.md  implementation-plan.md  operations.md  security-review.md
docs/adr/: 0001-canonical-product-name.md  0002-multi-user-workspace-ownership.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/backup_decode/: bad-manifest  truncated-descriptor
fuzz/corpus/codec_decode/: valid-zstd-control
fuzz/corpus/format_decode/: bad-magic
fuzz/corpus/open_chunk_recovery/: partial-record-tail
fuzz/corpus/snapshot_manifest_decode/: bad-magic  truncated-header
fuzz/fuzz_targets/: backup_decode.rs  codec_decode.rs  format_decode.rs  open_chunk_recovery.rs  snapshot_manifest_decode.rs
