[package]
name = "reflink-forest-backup"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Verified checkpoint, backup, and restore primitives for Reflink Forest"

[dependencies]
reflink-forest-format = { path = "../reflink-forest-format" }
reflink-forest-index = { path = "../reflink-forest-index", default-features = false, features = ["rocksdb-backend"], optional = true }
sha2 = "0.10"

[features]
default = []
rocksdb-catalog = ["dep:reflink-forest-index"]
