[package]
name = "reflink-forest-cache"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Atomic content-addressed hot cache for Reflink Forest"

[dependencies]
reflink-forest-core = { path = "../reflink-forest-core" }
reflink-forest-format = { path = "../reflink-forest-format" }
reflink-forest-index = { path = "../reflink-forest-index" }
reflink-forest-store = { path = "../reflink-forest-store" }
libc = "0.2"
