[package]
name = "reflink-forest-checkout"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Byte-safe raw Git checkout planning for Reflink Forest"

[dependencies]
reflink-forest-core = { path = "../reflink-forest-core" }
reflink-forest-cache = { path = "../reflink-forest-cache" }
