[package]
name = "reflink-forest-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Per-user local daemon primitives for Reflink Forest"

[dependencies]
reflink-forest-cache = { path = "../reflink-forest-cache" }
reflink-forest-core = { path = "../reflink-forest-core" }
reflink-forest-format = { path = "../reflink-forest-format" }
reflink-forest-import = { path = "../reflink-forest-import" }
reflink-forest-index = { path = "../reflink-forest-index" }
reflink-forest-maintenance = { path = "../reflink-forest-maintenance" }
reflink-forest-store = { path = "../reflink-forest-store" }
reflink-forest-workspace = { path = "../reflink-forest-workspace" }
