[package]
name = "reflink-forest-git"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Local Git repository snapshots and object traversal for Reflink Forest"

[dependencies]
git2 = { version = "=0.21.0", default-features = false, features = [
    "unstable-sha256",
    "vendored-libgit2",
] }
reflink-forest-core = { path = "../reflink-forest-core" }
