[package]
name = "reflink-forest-maintenance"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Generation leases and atomic maintenance state for Reflink Forest"

[dependencies]
reflink-forest-index = { path = "../reflink-forest-index" }
reflink-forest-core = { path = "../reflink-forest-core" }
reflink-forest-format = { path = "../reflink-forest-format" }
reflink-forest-git = { path = "../reflink-forest-git" }
reflink-forest-import = { path = "../reflink-forest-import" }

[dev-dependencies]
reflink-forest-store = { path = "../reflink-forest-store" }
